Update RSA secret codes (learnt from Liebeck).ipynb

--- a/Secret codes/RSA secret codes (learnt from Liebeck).ipynb
+++ b/Secret codes/RSA secret codes (learnt from Liebeck).ipynb
@@ -364,7 +364,8 @@
     "print(\"Decoded raw number string:\", \"\\n\"+decoded_message_number[:len(message_number)])\n",
     "\n",
     "#decoded_message_number may be longer than the raw message_number,\n",
-    "#because 0s are added during encoding to avoid encoding "
+    "#because 0s are added during encoding to avoid ambiguity\n"
+    "#different messages now must have different encoded list of numbers"
    ]
   },
   {
